[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/GUI/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/menu_button_gray_unpressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/menu_button_gray_pressed.png" type="Texture" id=3]
[ext_resource path="res://Classes/CustomButton.gd" type="Script" id=4]
[ext_resource path="res://Game/Tutorial/TutorialBox.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 39
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="TutorialBox" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 12
size_flags_vertical = 12
color = Color( 0.823529, 0.823529, 0.823529, 1 )
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2

[node name="Back" type="TextureButton" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -110.0
margin_right = 167.0
rect_min_size = Vector2( 167, 110 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Control/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Back"
align = 1
valign = 1

[node name="Next" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -167.0
margin_top = -110.0
rect_min_size = Vector2( 167, 110 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Control/Next"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Next"
align = 1
valign = 1

[node name="Label" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Welcome to Better Tic Tac Toe!
The goal is to bla bla bla.
OK?"
align = 1
autowrap = true
clip_text = true

[connection signal="button_left_area" from="Control/Back" to="." method="_on_Back_button_left_area"]
[connection signal="button_pressed" from="Control/Back" to="." method="_on_Back_button_pressed"]
[connection signal="button_released" from="Control/Back" to="." method="_on_Back_button_released"]
[connection signal="button_left_area" from="Control/Next" to="." method="_on_Next_button_left_area"]
[connection signal="button_pressed" from="Control/Next" to="." method="_on_Next_button_pressed"]
[connection signal="button_released" from="Control/Next" to="." method="_on_Next_button_released"]
